# modern_io

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  modern_io.ixx  modern_io_buffered.ixx  modern_io_concepts.ixx  modern_io_data.ixx  modern_io_file.ixx  modern_io_iostream.ixx  net_io.ixx  net_io_adapters.ixx  net_io_base.ixx  net_io_concepts.ixx  tcp_client.ixx  tcp_endpoint.ixx  tcp_server.ixx  udp_endpoint.ixx  udp_transport.ixx
.github/workflows/: cmake-multi-platform.yml
